# slidingbear

./: .gitignore  README.md  pyproject.toml
src/slidingbear/: DataLoaders.py  Hierarchy.py  HierarchyLoaders.py  Transforms.py  WindowLoader.py  __init__.py  helpers.py
src/windows/: DataLoader.py  DataLoaders.py  Hierarchy.py  HierarchyLoaders.py  Transforms.py  WindowLoader.py  ZScore.py  __init__.py
